feat(spring-lombok): production hardening and containerization
Security:
- Add JWT_SECRET validation at startup (fails if < 32 chars)
- Make CORS origins configurable via CORS_ORIGINS env var
- Use env var for DATABASE_PASSWORD in docker-compose

Docker:
- Create multi-stage Dockerfile with JRE Alpine base
- Add non-root user for security
- Add HEALTHCHECK for container orchestration

Operations:
- Add app service to docker-compose with healthcheck
- Add restart: unless-stopped to all services
- Add /api/v1/health/live and /api/v1/health/ready endpoints
- Endpoints verify database and Redis connectivity

Documentation:
- Update README with Docker, health endpoints, env vars
- Create CONTRIBUTING.md with contribution guidelines
- Create .env.example with all required variables